--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="index.html" title="Voltar para a página inicial">
+      <a class="logo" href="index.html" title="Voltar para a página inicial">
         <img
           src="img/bussola-jornada-branca.png"
           alt="Bussola do logo Jornada Viagens na cor preta."
@@ -17,9 +17,22 @@
       <img src="img/menu.png" alt="menu" />
       <nav>
         <ul>
-          <li><a href="blog.html" target="_blank" title="Acessar blog">Blog</a></li>
-          <li><a href="pacotes.html" target="_blank" title="Acessar pacotes de viagem">Pacotes de viagem</a></li>
-          <li><a href="contato.html" target="_blank" title="Acessar contatos">Contato</a></li>
+          <li>
+            <a href="blog.html" target="_blank" title="Acessar blog">Blog</a>
+          </li>
+          <li>
+            <a
+              href="pacotes.html"
+              target="_blank"
+              title="Acessar pacotes de viagem"
+              >Pacotes de viagem</a
+            >
+          </li>
+          <li>
+            <a href="contato.html" target="_blank" title="Acessar contatos"
+              >Contato</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
